# iptest_flet

./: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt
.github/workflows/: build-android.yml  build-ios.yml  build.yml
src/: main.py
src/assets/lang/: en_US.yaml  zh_CN.yaml  zh_TW.yaml
