[project]
name = "iptest"
version = "2.0.0"
description = "Network testing tool by Doodle Huang"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Doodle Huang" }
]
dependencies = [
    "flet",
    "aiohttp",
    "beautifulsoup4",
    "yaml"
]

[tool.flet]
org = "com.doodlehuang"
product = "IPTest by Doodle Huang"
company = "Doodle Huang"
copyright = "Copyright (C) 2025 by Doodle Huang"

[tool.flet.app]
path = "src"
module = "main" 